made changes as suggested by reviewer